# tennis-value

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
data/samples/tennis_data/: sample_2024.csv  sample_2025.csv
scripts/: fetch_real_data.py  fetch_sackmann_data.py  seed_sample_data.py  seed_training_fixture.py
src/tennis_value/: __init__.py  backtest.py  benchmark_markets.py  cleaning.py  cli.py  config.py  diagnose_v2.py  elo.py  evaluate.py  features.py  ingest.py  journal.py  odds.py  odds_audit.py  orientation.py  predict.py  rolling.py  sackmann.py  schemas.py  train.py  train_v2.py  train_v2_1.py  value.py
tests/: test_backtest.py  test_cleaning.py  test_config.py  test_diagnose_v2.py  test_elo.py  test_evaluate.py  test_features.py  test_ingest.py  test_market_benchmark.py  test_no_leakage.py  test_odds.py  test_odds_audit.py  test_orientation.py  test_sackmann.py  test_sackmann_downloader.py  test_schemas.py  test_smoke.py  test_train.py  test_train_v2.py  test_train_v2_1.py  test_v2_ablation.py  test_value.py  test_walk_forward.py
